@@ -7,15 +7,12 @@ import com.sytoss.domain.bom.lessons.Exam;
 import com.sytoss.domain.bom.lessons.Task;
 import com.sytoss.domain.bom.users.Group;
 import com.sytoss.domain.bom.users.Teacher;
+import com.sytoss.lessons.bom.GroupAssignment;
 import com.sytoss.lessons.connectors.*;
 import com.sytoss.lessons.controllers.api.FilterItem;
 import com.sytoss.lessons.convertors.DisciplineConvertor;
 import com.sytoss.lessons.convertors.TaskConvertor;
-import com.sytoss.lessons.dto.GroupReferenceDTO;
-import com.sytoss.lessons.dto.TaskDTO;
-import com.sytoss.lessons.dto.TaskDomainDTO;
-import com.sytoss.lessons.dto.TopicDTO;
-import com.sytoss.lessons.dto.DisciplineDTO;
+import com.sytoss.lessons.dto.*;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -32,7 +29,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Slf4j
@@ -147,12 +143,11 @@ public class DisciplineService extends AbstractService {
     public void assignGroupToDiscipline(Long disciplineId, Long groupId) {
         getById(disciplineId);
         DisciplineDTO disciplineDTO = disciplineConnector.getReferenceById(disciplineId);
-        GroupReferenceDTO groupReferenceDTO = new GroupReferenceDTO(groupId, disciplineDTO);
+        GroupReferenceDTO groupReferenceDTO = new GroupReferenceDTO(groupId, disciplineDTO, false);
         groupReferenceConnector.save(groupReferenceDTO);
     }
 
     public List<Group> getGroups(Long disciplineId) {
-
         List<GroupReferenceDTO> groups = groupReferenceConnector.findByDisciplineId(disciplineId);
         List<Group> result = new ArrayList<>();
         Discipline discipline = getById(disciplineId);
@@ -226,7 +221,7 @@ public class DisciplineService extends AbstractService {
         Discipline discipline = getById(disciplineId);
         analyticsService.deleteByDiscipline(disciplineId);
         List<Exam> examList = examService.getExamsByDiscipline(disciplineId);
-        for (Exam exam: examList) {
+        for (Exam exam : examList) {
             examService.delete(exam.getId());
         }
 
@@ -252,10 +247,10 @@ public class DisciplineService extends AbstractService {
             Discipline discipline = new Discipline();
             disciplineConvertor.fromDTO(disciplineDTO, discipline);
             return discipline;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
-    private Discipline convert(DisciplineDTO disciplineDTO){
+    private Discipline convert(DisciplineDTO disciplineDTO) {
         Discipline discipline = new Discipline();
         disciplineConvertor.fromDTO(disciplineDTO, discipline);
         return discipline;
@@ -263,5 +258,32 @@ public class DisciplineService extends AbstractService {
 
     public List<Exam> getExamsByStudent(Long disciplineId) {
         return examService.findExamsByStudent(disciplineId);
+    }
+
+    public void excludeGroupFromDiscipline(Long disciplineId, Long groupId) {
+        GroupReferenceDTO groupReferenceDTO = groupReferenceConnector.findByDisciplineIdAndGroupId(disciplineId, groupId);
+        groupReferenceDTO.setIsExcluded(true);
+        groupReferenceConnector.save(groupReferenceDTO);
+        analyticsService.removeAnalyticsByDisciplineAndGroup(disciplineId, groupId);
+    }
+
+    public List<GroupAssignment> getGroupsAssignment(Long disciplineId) {
+        List<GroupReferenceDTO> groups = groupReferenceConnector.findByDisciplineId(disciplineId);
+        List<GroupAssignment> result = new ArrayList<>();
+        Discipline discipline = getById(disciplineId);
+        for (GroupReferenceDTO item : groups) {
+            GroupAssignment groupAssignment = new GroupAssignment();
+            Group group = new Group();
+            group.setId(item.getGroupId());
+            group.setDiscipline(discipline);
+            if(item.getIsExcluded() == null){
+                item.setIsExcluded(false);
+                groupReferenceConnector.save(item);
+            }
+            groupAssignment.setExcluded(item.getIsExcluded());
+            groupAssignment.setGroup(group);
+            result.add(groupAssignment);
+        }
+        return result;
     }
 }
